# SIA

./: .gitignore  README.md  SIA_Demo.ipynb  main.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: test.yml
design_graveyard/: growth_kernel.md
doc/: identity_engine.md  self_modulated_attention_design.md  sia_core_equation.md  trace_tensor_attention.md  要件定義.md
experiments/: 02_.md  02_self_conditioned_deformation.py  03_self_condition_attention.py  main.py  tech.py
experiments/docs/: 01_self_conditioned_attention.md  02_self_conditioned_deformation.md  03_veryfy_self_impact.md  04_report_self_evolution.md
experiments/outputs/: 01_self_conditioned_attention.md
experiments/src/: 01_self_conditioned_attention.py  03_self_condition_attention.py  03_verify_self_impact.py  04_self_growth_over_time.py  05_multi.py  06_semantic_gravity.py  07_real_embedding_injection.py  09_affective_state_manager.py  11_trace_tensor_attention_demo.py  12_self-conditioned_trace_tensor_attention.py  13_growth_kernel_demo.py  14_run_self_evolution_demo.py  15_compare_pre_post_self.py  16_sia_pipeline.py  17_self_conditioned_generation.py
notebooks/: SIA_Demo.ipynb
src/: affective_brain.py  identity_engine.py  llama_body.py  mini_transformer.py  sia_attention.py  sia_controller.py  trace_extractor.py  visualize_selfspace.py
src/controller/: sia_controller.py
src/models/: transformer_block_sia.py
src/transformer/: llama_body.py  mini_transformer.py  self_attention.py
src_v1/: SIAAttentionEncoder.py  abc.py  runv6.1.py  v1.py  v14.py  v5.py  v6.py
(+27 files in other folders)
